// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render text input 1`] = `
<div
  className="px-3 py-2 inline-flex items-center border-2 border-gray-300 rounded-md focus-within:ring-2 focus-within:ring-indigo-500 focus-within:border-indigo-500"
>
  <input
    className="focus:outline-none"
    onChange={[Function]}
    type="text"
    value=""
  />
</div>
`;

exports[`should render text input with clear btn 1`] = `
<div
  className="px-3 py-2 inline-flex items-center border-2 border-gray-300 rounded-md focus-within:ring-2 focus-within:ring-indigo-500 focus-within:border-indigo-500"
>
  <input
    className="focus:outline-none w-[calc(100%-theme(space.5))]"
    onChange={[Function]}
    type="text"
    value="123"
  />
  <button
    className="w-5 h-5 min-w-5 min-h-5"
    data-testid="clear-text-input"
    onClick={[Function]}
  >
    Clear
  </button>
</div>
`;

exports[`should render text input without clear btn 1`] = `
<div
  className="px-3 py-2 inline-flex items-center border-2 border-gray-300 rounded-md focus-within:ring-2 focus-within:ring-indigo-500 focus-within:border-indigo-500"
>
  <input
    className="focus:outline-none"
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    placeholder="Type here"
    type="text"
    value="123"
  />
</div>
`;
